Change theme to dark mode & Fix text styling issues

--- a/index.css
+++ b/index.css
@@ -4,8 +4,14 @@
 	box-sizing: border-box;
 }
 
+body {
+	background-color: black;
+	color: #aaa;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 header {
-	display: flex;
+	text-align: center;
 }
 
 footer {
@@ -13,14 +19,18 @@ footer {
 	bottom: 0;
 }
 
-.flashcard {
-	background-color: lightgrey;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 24pt;
-
+.no-text-select {
 	-webkit-user-select: none; /* Safari */
 	-ms-user-select: none; /* IE 10 & 11 */
 	user-select: none;
+}
+
+.flashcard {
+	background-color: #222;
+	border-radius: 12px;
+
+	font-size: 30px;
+	font-size: 3.5vw;
 
 	display: flex;
 	justify-content: center;
@@ -28,7 +38,7 @@ footer {
 	text-align: center;
 	vertical-align: middle;
 
-	margin: 10%;
+	margin: 6%;
 	position: absolute;
 	top: 0px;
 	right: 0px;
